scss main files

--- a/src/assets/scss/Main.scss
+++ b/src/assets/scss/Main.scss
@@ -3,6 +3,6 @@
 @import "./global.scss";
 
 //pages
-@import "../../pages/All/style.scss";
-@import "../../pages/Attended/style.scss";
+@import "../../pages/AllCandidates/style.scss";
+@import "../../pages/CandidatesAttended/style.scss";
 @import "../../pages/TrashCan/style.scss";
