--- a/src/pages/AllCandidates/style.scss
+++ b/src/pages/AllCandidates/style.scss
@@ -37,14 +37,13 @@
 .navbar {
   width: 100vw;
   height: 100vh;
-
   display: flex;
 }
 
 .navbar aside {
   width: 200px;
   background: #fff;
-  padding: 0 80px;
+  padding: 0 20px;
   display: flex;
   flex-direction: column;
   box-shadow: 3px 3px 5px 3px rgba(0, 0, 0, 0.2);
@@ -55,13 +54,83 @@
   margin: 20px 0;
 }
 
+.navbar aside ul li div {
+  display: flex;
+  align-items: center;
+  justify-items: center;
+}
+
 .navbar aside ul li a {
   text-decoration: none;
   font-size: 22px;
   color: #a9a9a9;
+  padding-left: 24px;
 }
 
 .navbar aside ul li a.active {
   color: #8dc63f;
   font-weight: bold;
+}
+
+//cadidates list
+.candidateslist {
+  max-width: 1100px;
+  margin: 40px auto;
+  width: 100%;
+}
+
+.candidateslist main {
+  display: flex;
+  justify-items: center;
+  align-items: center;
+  justify-content: space-between;
+
+  padding: 10px;
+
+  background: #fff;
+
+  border: 2px solid rgba(0, 0, 0, 0.2);
+
+  box-shadow: 0px 1px 9px 3px rgba(0, 0, 0, 0.2);
+}
+
+.candidateslist main:first-child {
+  border-radius: 4px 4px 0 0;
+}
+
+.candidateslist main:last-child {
+  border-radius: 0 0 4px 4px;
+}
+
+.candidateslist main div {
+  display: flex;
+  justify-items: center;
+  align-items: center;
+}
+
+.candidateslist main div img {
+  border-radius: 50%;
+  margin-left: 14px;
+}
+
+.candidateslist main div p {
+  color: #a9a9a9;
+  font-size: 18px;
+}
+
+.candidateslist main div p + p {
+  padding-left: 42px;
+}
+
+.candidateslist main div h2 {
+  padding-left: 22px;
+  color: #4f4f4f;
+}
+
+.candidateslist main div svg:last-child {
+  margin-right: 14px;
+}
+
+.candidateslist main div svg + svg {
+  margin-left: 22px;
 }
