--- a/src/assets/scss/Main.scss
+++ b/src/assets/scss/Main.scss
@@ -6,3 +6,4 @@
 @import "../../pages/AllCandidates/style.scss";
 @import "../../pages/CandidatesAttended/style.scss";
 @import "../../pages/TrashCan/style.scss";
+@import "../../pages/Candidate/style.scss";
