--- a/src/pages/AllCandidates/style.scss
+++ b/src/pages/AllCandidates/style.scss
@@ -79,6 +79,10 @@
   width: 100%;
 }
 
+.candidateslist a {
+  text-decoration: none;
+}
+
 .candidateslist main {
   display: flex;
   justify-items: center;
