create new variables

--- a/src/assets/scss/_conf.scss
+++ b/src/assets/scss/_conf.scss
@@ -1,2 +1,8 @@
+$LIGHT_GRAY: #a9a9a9;
+$MEDIUM_GRAY: #4f4f4f;
+$LIGHTER_GRAY: #dcdcdc;
 $GRAY: #f5f5f5;
 $DARK_BLUE: #0c3455;
+$SHADOW: rgba(0, 0, 0, 0.2);
+$WHITE: #fff;
+$GREEN: #8dc63f;
