create link to components styles

--- a/src/assets/scss/Main.scss
+++ b/src/assets/scss/Main.scss
@@ -1,9 +1,13 @@
 //confs and global
-@import "./conf";
-@import "./global.scss";
+@import './conf';
+@import './global.scss';
 
 //pages
-@import "../../pages/AllCandidates/style.scss";
-@import "../../pages/CandidatesAttended/style.scss";
-@import "../../pages/TrashCan/style.scss";
-@import "../../pages/Candidate/style.scss";
+@import '../../pages/AllCandidates/style.scss';
+@import '../../pages/CandidatesAttended/style.scss';
+@import '../../pages/TrashCan/style.scss';
+@import '../../pages/Candidate/style.scss';
+
+//components
+@import '../../components/Header/style.scss';
+@import '../../components/CandidateList/style.scss';
