--- a/src/pages/Candidate/style.scss
+++ b/src/pages/Candidate/style.scss
@@ -4,7 +4,7 @@
 }
 
 .candidate header {
-  height: 350px;
+  height: 320px;
   background: $DARK_BLUE;
 }
 
@@ -12,13 +12,13 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  height: 38px;
-  width: 38px;
+  height: 32px;
+  width: 32px;
   background: $WHITE;
   border-radius: 50%;
   position: absolute;
-  top: 26px;
-  left: 26px;
+  top: 18px;
+  left: 18px;
   transition: opacity 0.2s;
   box-shadow: 0px 1px 9px 3px $SHADOW;
 }
@@ -33,16 +33,15 @@
 
 .candidate main {
   position: absolute;
-  height: 560px;
-  width: 780px;
+  width: 700px;
   background: $WHITE;
-  top: 120px;
-  left: 340px;
+  top: 100px;
+  left: 300px;
   box-shadow: 0px 1px 9px 3px $SHADOW;
 }
 
 .header {
-  height: 170px;
+  height: 140px;
   background: $GRAY;
 }
 
@@ -60,12 +59,12 @@
 }
 
 .candidatedata img {
-  height: 220px;
-  width: 220px;
+  height: 200px;
+  width: 200px;
   border-radius: 50%;
   position: absolute;
-  top: 60px;
-  left: 280px;
+  top: 36px;
+  left: 250px;
   border: 1px solid $LIGHTER_GRAY;
 }
 
@@ -74,19 +73,20 @@
 }
 
 .candidatedata div p {
-  font-size: 24px;
+  font-size: 22px;
   color: $LIGHT_GRAY;
-  margin-bottom: 16px;
+  margin-bottom: 12px;
 }
 
 .candidatedata div p + p {
-  font-size: 38px;
+  font-size: 36px;
   font-weight: bold;
   color: $MEDIUM_GRAY;
 }
 
 .icons {
   width: 500px;
+  margin-top: 38px;
 }
 
 .icons div {
