--- a/src/assets/scss/_conf.scss
+++ b/src/assets/scss/_conf.scss
@@ -6,3 +6,5 @@ $DARK_BLUE: #0c3455;
 $SHADOW: rgba(0, 0, 0, 0.2);
 $WHITE: #fff;
 $GREEN: #8dc63f;
+
+$BREAKPOINT_MOBILE: 'only screen and (max-width: 460px)';
