--- a/src/components/CandidateList/style.scss
+++ b/src/components/CandidateList/style.scss
@@ -19,6 +19,12 @@
   background: $WHITE;
   border: 2px solid $SHADOW;
   box-shadow: 0px 1px 9px 3px $SHADOW;
+
+  @media #{$BREAKPOINT_MOBILE} {
+    height: 200px;
+    display: flex;
+    flex-direction: column;
+  }
 }
 
 .candidateslist main:first-child {
@@ -39,6 +45,10 @@
   border-radius: 50%;
   margin-left: 14px;
   height: 42px;
+
+  @media #{$BREAKPOINT_MOBILE} {
+    height: 60px;
+  }
 }
 
 .candidateslist main div h3 {
@@ -52,6 +62,16 @@
   display: flex;
   width: 630px;
   justify-content: space-between;
+
+  @media #{$BREAKPOINT_MOBILE} {
+    display: flex;
+    flex-direction: column;
+    font-size: 18px;
+
+    p {
+      margin: 5px;
+    }
+  }
 }
 
 .candidateslist main div svg:last-child {
