--- a/src/pages/Candidate/style.scss
+++ b/src/pages/Candidate/style.scss
@@ -38,6 +38,12 @@
   top: 100px;
   left: 300px;
   box-shadow: 0px 1px 9px 3px $SHADOW;
+
+  @media #{$BREAKPOINT_MOBILE} {
+    width: 350px;
+    top: 120px;
+    left: 32px;
+  }
 }
 
 .header {
@@ -66,6 +72,13 @@
   top: 36px;
   left: 250px;
   border: 1px solid $LIGHTER_GRAY;
+
+  @media #{$BREAKPOINT_MOBILE} {
+    height: 160px;
+    width: 160px;
+    top: 54px;
+    left: 100px;
+  }
 }
 
 .candidatedata div {
@@ -87,6 +100,11 @@
 .icons {
   width: 500px;
   margin-top: 38px;
+
+  @media #{$BREAKPOINT_MOBILE} {
+    width: 330px;
+    margin-top: 38px;
+  }
 }
 
 .icons div {
