--- a/src/assets/scss/Main.scss
+++ b/src/assets/scss/Main.scss
@@ -5,7 +5,7 @@
 //pages
 @import '../../pages/AllCandidates/style.scss';
 @import '../../pages/CandidatesAttended/style.scss';
-@import '../../pages/TrashCan/style.scss';
+@import '../../pages/CandidatesDeclined/style.scss';
 @import '../../pages/Candidate/style.scss';
 
 //components
